0.7.6 - Removed x from Item